fix: center the components in dark mode

--- a/src/components/switchTheme.css
+++ b/src/components/switchTheme.css
@@ -6,3 +6,9 @@ body.dark{
 input[type="checkbox"] {
   display: none;
 }
+
+label {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
